Fixed issue with layout shifting, renamed education tab

--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ body {
 
 @media (min-width: 2400px) {
   section {
-    height: 65dvh;
+    min-height: 65dvh;
   }
 }
 
